--- a/src/app/componente/navbar/navbar.component.html
+++ b/src/app/componente/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<p>navbar works!</p>
+<nav class="navbar bg-dark border-botton-dark" data-bs-theme="dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">{{titulo}}</a>
+    </div>
+</nav>
